tests/compile_fail/duplicate-into.stderr
error: duplicate #[into] attribute
  --> $DIR/duplicate-into.rs:16:5
   |
16 |     #[into]
   |     ^
